src/main/metadata/objects/SMSTestRecipient__c.object
<CustomObject>
    <description>Set up SMS Test Recipient Group member</description>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>TestRecipientName__r.MobilePhone</formula>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestRecipientGroup__c</fullName>
        <label>Test Recipient Group</label>
        <referenceTo>TestRecipientGroup__c</referenceTo>
        <relationshipLabel>SMSTestRecipients</relationshipLabel>
        <relationshipName>SMSTestRecipients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TestRecipientName__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Test Recipient Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.SMSOptOut__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>Contact.MobilePhone</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SMSTestRecipients</relationshipLabel>
        <relationshipName>SMSTestRecipients</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>SMS Test Recipient</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>SMS Test Recipient ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMSTestRecipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>